feat(subscription): archive history and harden payment recording
Keep payments saved when receipt email or PDF fails, and soft-archive growing payment, invoice, and reminder rows.